# rinne

./: LICENSE  README.md
cpu/: CMakeLists.txt  Makefile  rinne.cpp  rinne.hpp
cpu-mt/: CMakeLists.txt  rinne.cpp  rinne.hpp
cuda/: CMakeLists.txt  rinne.cpp  rinne.cu  rinne.hpp
tools/: cnn.py
